# advent-of-code

.github/workflows/: ci.yml
2025/: Cargo.toml  README.md
2025/src/: helpers.rs  lib.rs
2025/src/template/commands/: all.rs  scaffold.rs
